<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="550dp">

        <ImageView
            android:contentDescription="@string/image_user"
            android:id="@+id/img_item_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/image_agust" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageButton
                android:contentDescription="@string/back"
                android:id="@+id/back_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/bg_button"
                android:gravity="center_vertical"
                android:src="@drawable/ic_baseline_chevron_left_24" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="75dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/name"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/email"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-60dp"
        android:background="@drawable/bg_detail"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="16dp">

            <ImageButton
                android:contentDescription="@string/linkedin_button"
                android:id="@+id/linkedin_button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/bg_button_booking"
                android:src="@drawable/linkedin"
                android:textColor="#FFF"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/linkedin"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="16dp">

            <ImageButton
                android:contentDescription="@string/email_button"
                android:id="@+id/email_button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/bg_button_booking"
                android:src="@drawable/ic_baseline_email_24"
                android:textColor="#FFF"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/email_text"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:contentDescription="@string/call_button"
                android:id="@+id/call_button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/bg_button_booking"
                android:src="@drawable/ic_baseline_call_24"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/telfon"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>