<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="350dp">
            
            <ImageView
                android:contentDescription="@string/image_for_show_hotel"
                android:id="@+id/img_item_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="center"
                android:src="@drawable/best_western_premier_the_hive"
                android:adjustViewBounds="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <ImageButton
                    android:contentDescription="@string/button_for_back"
                    android:id="@+id/back_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_button"
                    android:gravity="center_vertical"
                    android:src="@drawable/ic_baseline_chevron_left_24"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end">

                    <ImageButton
                        android:contentDescription="@string/button_for_share"
                        android:id="@+id/share_button"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/bg_button"
                        android:gravity="center_vertical"
                        android:src="@drawable/ic_baseline_share_24"/>
                </LinearLayout>

            </LinearLayout>

        </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-60dp"
        android:background="@drawable/bg_detail"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_hotel_name_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hotel_name"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:fontFamily="@font/montserrat_bold"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textSize="24sp"/>

        <RatingBar
            android:id="@+id/rb_item_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:numStars="5"
            android:rating="4.5"
            android:scaleX=".5"
            android:scaleY=".5"
            android:isIndicator="true"
            android:progressTint="@color/redMain"/>
        <TextView
            android:id="@+id/tv_hotel_price_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:gravity="center"
            android:layout_marginBottom="16dp"
            android:textColor="@color/redMain"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="24sp"/>


        <TextView
            android:id="@+id/tv_hotel_address_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address_hotel"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:fontFamily="@font/montserrat"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">
            <Button
                android:id="@+id/booking_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/booking_sekarang"
                android:textColor="#FFF"
                android:textSize="20sp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:background="@drawable/bg_button_booking"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>