<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundMain"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:scrollbars="none"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/about_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/tentang_saya"
            android:textColor="#FFF"
            android:textSize="14sp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="end"
            android:background="@drawable/bg_button_booking"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_hotel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/hotel"
                    android:textColor="@android:color/black"
                    android:textSize="32sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="end">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:drawableStartCompat="@drawable/ic_baseline_location_on_24"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/jakarta"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_hotels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_row_hotels" />
    </LinearLayout>

</LinearLayout>